--- a/application/app/app.html
+++ b/application/app/app.html
@@ -68,7 +68,7 @@
                         <!-- There are no files -->
                         <div class="no-files" ng-if="projectImages.length == 0">
 
-                            <h1 class="icomoon-sad"></h1>
+                            <h1 class="icomoon-images"></h1>
 
                             <p>No images found.</p>
 
