replaced superfluous message with useful info

--- a/application/app/options.html
+++ b/application/app/options.html
@@ -401,7 +401,7 @@
                 <input type="checkbox" ng-model="userConfig.experimental.fileWatcher">
                 <span class="label-desc"> Enable Faster Event Based File Watcher</span>
             </label>
-            <div class="alert alert-info">Event based file watcher greatly improves performance and battery life. You can disable it if you are having any troubles.</div>
+            <div class="alert alert-info">Event based file watcher greatly improves performance. You can disable it if change detection is not working properly.</div>
         </div>
 
     </div>
