fixed some file watcher bugs

--- a/application/app/options.html
+++ b/application/app/options.html
@@ -393,7 +393,7 @@
             </div>
 
             <label>
-                <input type="checkbox" ng-model="userConfig.experimental.autoAddFile">
+                <input type="checkbox" ng-model="userConfig.experimental.autoAddRemoveFile">
                 <span class="label-desc">Automatically Add/Remove File Without Refreshing</span>
             </label>
 
