--- a/application/app/options.html
+++ b/application/app/options.html
@@ -401,7 +401,7 @@
                 <input type="checkbox" ng-model="userConfig.experimental.fileWatcher">
                 <span class="label-desc"> Enable Faster Event Based File Watcher</span>
             </label>
-            <div class="alert alert-info">Event based file watcher greatly improves performance and battery life but it's not fully tested so use at your own risk.</div>
+            <div class="alert alert-info">Event based file watcher greatly improves performance. Disable it if you are having issues with change detection.</div>
         </div>
 
     </div>
