compass config.rb

--- a/application/app/options.html
+++ b/application/app/options.html
@@ -151,6 +151,10 @@
                 <span class="label-desc">Full Compass Support</span>
             </label>
             <label>
+                <input type="checkbox" ng-model="userConfig.sass.compassConfigRb">
+                <span class="label-desc">Use Config.rb Options</span>
+            </label>
+            <label>
                 <input type="checkbox" ng-model="userConfig.sass.autoprefixer">
                 <span class="label-desc">Auto Prefix CSS</span>
             </label>
