--- a/application/app/options.html
+++ b/application/app/options.html
@@ -415,7 +415,7 @@
                 <input type="checkbox" ng-model="userConfig.experimental.fileWatcher">
                 <span class="label-desc"> Enable Faster Event Based File Watcher</span>
             </label>
-            <div class="alert alert-info">Event based file watcher greatly improves performance. Disable it if you are having issues with change detection.</div>
+            <div class="alert alert-info">Event based file watcher greatly improves performance but doesn't work with network drives. Disable it if you are having issues with change detection.</div>
         </div>
 
     </div>
