fixed mac notification bug
closes #423

--- a/application/app/notif.html
+++ b/application/app/notif.html
@@ -44,12 +44,20 @@
                     nwin.height = height;
 
                     if (process.platform === 'win32') {
+
                         nwin.y = (window.screen.availHeight - 5) - height;
+
+                    } else {
+
+                        nwin.y = 10;
                     }
 
                     if (typeof nwin.showInactive === 'function') {
+
                         nwin.showInactive();
+
                     } else {
+
                         nwin.show();
                         nwin.blur();
                     }
