--- a/application/app/app.html
+++ b/application/app/app.html
@@ -38,12 +38,18 @@
 		
 		require('coffee-script').register();
 
-        //This function is fucked up in OS X
-        Prepros.gui.Shell.openItem = Prepros.gui.Shell.openExternal = function(item) {
+        if(Prepros.PLATFORM_MAC) {
 
-            require('child_process').spawn('open', [item], { detached: true });
 
-        };
+            //This function is fucked up in OS X
+            Prepros.gui.Shell.openItem = Prepros.gui.Shell.openExternal = function(item) {
+
+                require('child_process').spawn('open', [item], { detached: true });
+
+            };
+
+        }
+
 
 		//Devtools for developers
 		//Allow anyone to open dev tools for error reporting
